# rust_audio_translate

./: Cargo.toml
src/: main.rs
src/comprehend/: mod.rs
src/s3/: mod.rs
src/transcribe/: mod.rs
src/transcripts/: 9Wbmuvpn1D.json
src/utils/: mod.rs
